Fix authentication flow and JWT token generation
- Add tenant_id to JWT tokens
- Implement proper login endpoint
- Update security dependencies
- Fix user info endpoint to handle missing tenant_id
- Add password hashing utilities
- Remove nested git repository from frontend

--- a/nail-salon-ai-saas/.env
+++ b/nail-salon-ai-saas/.env
@@ -2,3 +2,4 @@ POSTGRES_PASSWORD=mysecurepassword123
 SECRET_KEY=your-super-secret-jwt-key-at-least-32-chars
 GRAFANA_PASSWORD=admin
 DEBUG=false
+BACKEND_CORS_ORIGINS="http://localhost:5173,http://127.0.0.1:5173,http://localhost:3001"
