--- a/nail-salon-ai-saas/backend/.env
+++ b/nail-salon-ai-saas/backend/.env
@@ -10,5 +10,5 @@ POSTGRES_DB="nail_salon_saas"
 DATABASE_URL="postgresql+asyncpg://postgres1:Hanoi.2389@localhost:5432/nail_salon_saas"
 OLLAMA_HOST="http://localhost:11434"
 OLLAMA_MODEL="qwen2.5:7b"
-BACKEND_CORS_ORIGINS="http://localhost:5173,http://127.0.0.1:5173"
+BACKEND_CORS_ORIGINS="http://localhost:5173,http://127.0.0.1:5173,http://localhost:3001,http://127.0.0.1:3001,http://localhost:3000,http://127.0.0.1:3000"
 DEBUG="True"
