--- a/nail-salon-ai-saas/backend/Dockerfile
+++ b/nail-salon-ai-saas/backend/Dockerfile
@@ -16,11 +16,14 @@ FROM continuumio/miniconda3:latest
 
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies including bcrypt requirements
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
     libpq-dev \
+    build-essential \
+    python3-dev \
+    libffi-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy conda environment from builder
@@ -46,4 +49,3 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
 
 # Run the application
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
-
